generated/checkers/refine/KN-Misuse-ac19c4c3-0/build_logs/syntax-repair-refine-0-2/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘clang::ento::ProgramStateRef {anonymous}::SAGenTestChecker::processAssumptionOnSymExpr(clang::ento::ProgramStateRef, const clang::ento::SymExpr*, bool, const clang::ASTContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:471:56: error: ‘const class clang::ento::BinarySymExpr’ has no member named ‘getLHS’
  471 |         State = processAssumptionOnSymExpr(State, BSE->getLHS(), /*Assumption*/false, AC);
      |                                                        ^~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:472:56: error: ‘const class clang::ento::BinarySymExpr’ has no member named ‘getRHS’
  472 |         State = processAssumptionOnSymExpr(State, BSE->getRHS(), /*Assumption*/false, AC);
      |                                                        ^~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:479:56: error: ‘const class clang::ento::BinarySymExpr’ has no member named ‘getLHS’
  479 |         State = processAssumptionOnSymExpr(State, BSE->getLHS(), /*Assumption*/true, AC);
      |                                                        ^~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:480:56: error: ‘const class clang::ento::BinarySymExpr’ has no member named ‘getRHS’
  480 |         State = processAssumptionOnSymExpr(State, BSE->getRHS(), /*Assumption*/true, AC);
      |                                                        ^~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
